<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <SwitchPreference
        android:key="@string/pref_wifi_download"
        android:title="@string/way_to_download_images"
        android:summary="@string/wifi_only_download"
        android:defaultValue="true">
    </SwitchPreference>

    <com.github.runningforlife.photofans.ui.preference.EmptyListPreference
        android:key="@string/pref_choose_image_source"
        android:title="@string/website_to_download_images"
        android:summary="@string/website_to_download_images"
        android:entries="@array/image_website_name"
        android:entryValues="@array/image_website_url"
        android:defaultValue="@array/default_image_source">
    </com.github.runningforlife.photofans.ui.preference.EmptyListPreference>

</PreferenceScreen>