<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single"
        android:id="@+id/group_view">

        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/gallery" />

        <item
            android:id="@+id/nav_favorite"
            android:icon="@drawable/ic_favorite_black_24dp"
            android:title="@string/favorite" />

        <item
            android:id="@+id/nav_wallpaper"
            android:icon="@drawable/ic_wallpaper_black_24dp"
            android:title="@string/Wallpaper" />
    </group>

    <group android:id="@+id/group_manage">
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings_black_24dp"
            android:title="@string/tools" />

        <item android:id="@+id/nav_usage"
            android:title="@string/usage_guide"
            android:icon="@drawable/ic_help_black_24dp"/>
    </group>

</menu>
