<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <group android:id="@+id/group_adapter">

        <item
            android:id="@+id/grid_view"
            android:orderInCategory="100"
            android:title="@string/action_grid_view"
            android:visible="false"
            app:showAsAction="never" />

        <item android:id="@+id/list_view"
            android:orderInCategory="101"
            android:title="@string/action_list_view"
            android:visible="false"
            app:showAsAction="never" />

        <!-- currently not implemented -->
        <item android:id="@+id/stagger_view"
            android:orderInCategory="103"
            android:title="@string/action_stagger_view"
            android:visible="false"
            app:showAsAction="never" />

    </group>

</menu>
