<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/activity_vertical_margin">

    <EditText android:id="@+id/et_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:minHeight="48dp"
        android:background="@drawable/text_background"
        android:hint="@string/input_email_hint"/>

    <EditText android:id="@+id/et_advice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:background="@drawable/text_background"
        android:textColorHighlight="@color/colorAccent"
        android:minHeight="180dp"
        android:hint="@string/input_advice_hint"
        android:layout_marginBottom="@dimen/activity_vertical_margin"/>

    <Button android:id="@+id/btn_send"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_send"
        android:textSize="@dimen/button_text_size"
        android:background="@drawable/button_background"
        style="?android:attr/borderlessButtonStyle"
        android:textColor="@color/colorPrimary"
        android:layout_gravity="center" />

</LinearLayout>