<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center">

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_margin="@dimen/dialog_item_margin"
        android:textStyle="bold"
        android:textAppearance="@android:style/TextAppearance.Small"
        android:text="@string/night_time_setting_explanation" />

    <LinearLayout android:id="@+id/ll_time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_title"
        android:layout_marginTop="@dimen/dialog_item_margin"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dialog_item_margin"
            android:orientation="vertical">

            <TextView android:id="@+id/tv_start_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                android:text="@string/starting_night_time"
                android:padding="@dimen/text_padding"
                android:background="@drawable/text_background"
                android:layout_marginBottom="@dimen/dialog_item_margin" />

            <Spinner
                android:id="@+id/spinner_start"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:spinnerMode="dropdown" />

        </LinearLayout>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dialog_item_margin"
            android:layout_marginRight="@dimen/dialog_item_margin"
            android:src="@drawable/ic_chevron_right_grey_24dp"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dialog_item_margin"
            android:orientation="vertical">

            <TextView android:id="@+id/tv_end_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                android:layout_gravity="center"
                android:text="@string/end_night_time"
                android:padding="@dimen/text_padding"
                android:background="@drawable/text_background"
                android:layout_marginBottom="@dimen/dialog_item_margin"/>

            <Spinner
                android:id="@+id/spinner_end"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:spinnerMode="dropdown"/>

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>